# fsrs-rs-php

./: .gitignore  Cargo.toml  README.md  fsrs-rs-php.stubs.php
.cargo/: autofix.yml  config.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  autofix.yml
.idx/: dev.nix
examples/: example.php  optimize.php  sample.php  schedule.php  simulate.php
src/: lib.rs
