[package]
name = "fsrs-rs-php"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
ext-php-rs = "0.13.1"

[dependencies.fsrs]
# version = "2.0.4"
# path = "../fsrs-rs"
git = "https://github.com/open-spaced-repetition/fsrs-rs.git"
rev = "9b2f2f72f68e7fbddf1aff3ca0271d6ee26702e6"
